fixed filters mobile alignment

--- a/src/containers/styles/ProjectRspecReports.css
+++ b/src/containers/styles/ProjectRspecReports.css
@@ -140,7 +140,7 @@
     width: 30rem;
   }
 
-  .filters {
+  .projectReportsListButtons > .filters {
     display: flex;
   }
 
